src/test/test-models/bad/reserved/static_cast.stan
data {
  real static_cast;
}
model {
}
